updated gradle and minor code cleanup